RESOLVED FIXED 292435
REGRESSION (293958@main): Selection of table cells on MotionMark results page extends to the right, obscuring other table content
https://bugs.webkit.org/show_bug.cgi?id=292435
Summary REGRESSION (293958@main): Selection of table cells on MotionMark results page...
alan
Reported 2025-05-02 07:48:26 PDT
Attachments
Patch (5.59 KB, patch)
2025-05-02 08:30 PDT, alan
no flags
Patch (7.32 KB, patch)
2025-05-02 11:03 PDT, alan
no flags
[fast-cq]Patch (8.10 KB, patch)
2025-05-02 15:38 PDT, alan
no flags
alan
Comment 1 2025-05-02 08:30:24 PDT
alan
Comment 2 2025-05-02 11:03:30 PDT
alan
Comment 3 2025-05-02 15:38:39 PDT
Created attachment 475121 [details] [fast-cq]Patch
EWS
Comment 4 2025-05-02 17:55:46 PDT
Committed 294464@main (6ae5324f17e7): <https://commits.webkit.org/294464@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 475121 [details].
Note You need to log in before you can comment on or make changes to this bug.